# strictacode

./: .gitignore  .strictacode.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/actions/analyze/: action.yml
.github/workflows/: docs.yml  lint.yml  new_version.yml  notify.yml  publish.yml  strictacode.yml  tests.yml
.gitlab/templates/: strictacode.yml
.qarium/ai/employees/: developer.md  devops.md  lead.md  qa.md  tech-writer.md
ci/: index.html
cli-reference/: index.html
configuration/: index.html
docs/: ci.md  cli-reference.md  config.md  configuration.md  examples.md  getting-started.md  index.md  installation.md  interpretation.md  metrics.md  mkdocs.yml  report-fields.md
docs/overrides/: main.html
docs/public/: cli-reference.md  configuration.md  examples.md  index.md  interpretation.md  report-fields.md
examples/: index.html
getting-started/: index.html
installation/: index.html
interpretation/: index.html
metrics/: index.html
overrides/: main.html
report-fields/: index.html
search/: search_index.json
strictacode/: __main__.py  analyzer.py  config.py  constants.py  graph.py  loader.py  reporters.py  skill.py  source.py  statistics.py  threshold.py  utils.py
strictacode/calc/: __init__.py  complexity.py  score.py
strictacode/calc/pressure/: __init__.py  overengineering.py  refactoring.py
strictacode/calculations/: __init__.py  complexity.py  refactoring_pressure.py
strictacode/calculations/pressure/: overengineering.py  refactoring.py
strictacode/go/: __init__.py  _constants.py  analyzer.py  collector.py  loader.py
strictacode/js/: __init__.py  _constants.py  analyzer.py  collector.py  loader.py
strictacode/kotlin/: __init__.py  analyzer.py  collector.py  constants.py  loader.py  tools.py
strictacode/py/: __init__.py  analyzer.py  collector.py  constants.py  loader.py  patch.py
strictacode/reporters/: __init__.py  diff.py  result.py
strictacode/swift/: __init__.py  analyzer.py  collector.py  constants.py  loader.py  tools.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_graph.py  test_loader.py  test_reporters.py  test_score.py  test_source.py  test_statistics.py  test_threshold.py  test_utils.py
tests/calc/: test_complexity.py  test_overengineering.py  test_refactoring.py  test_score.py
tests/cli/: test_cli.py
tests/go/: test_go_analyzer_integration.py  test_go_collector_integration.py  test_go_loader.py
tests/js/: test_js_analyzer_integration.py  test_js_collector_integration.py  test_js_loader.py
tests/kotlin/: test_kotlin_analyzer_integration.py  test_kotlin_collector_integration.py  test_kotlin_loader.py  test_kotlin_tools.py
tests/py/: test_py_analyzer_imports.py  test_py_analyzer_type_usage.py  test_py_constants.py  test_py_loader.py  test_py_usage_integration.py
tests/reporters/: test_diff.py  test_result.py
tests/swift/: test_swift_analyzer.py  test_swift_collector.py  test_swift_loader.py  test_swift_tools.py
