[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strictacode"
dynamic = ["version"]
description = "Codebase health diagnostics"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "radon>=4.0.0",
    "click",
    "pyyaml",
    "tree-sitter>=0.24",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["strictacode"]

[project.scripts]
strictacode = "strictacode.__main__:app"

[project.urls]
Homepage = "https://github.com/qarium/strictacode"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.15.0"]
docs = ["mkdocs", "mkdocs-material"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["strictacode"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["strictacode"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "UP045", # `X | None` — not compatible with Python 3.10 dataclass fields, use `typing.Optional`
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG001", # unused function arguments allowed in tests
    "ARG002", # unused method arguments allowed in tests
]
"strictacode/py/patch.py" = [
    "I001",   # imports inside function for early patching
    "ARG002", # unused args in NoOpFileConfig stub
]
"strictacode/py/__init__.py" = [
    "E702",   # semicolon for early patch execution
    "E402",   # import not at top for early patch execution
    "I001",   # import order for early patch execution
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
